Apache-webserver/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache-container
          image: ghcr.io/kacper08480/docker-apache-webserver:latest
          ports:
            - containerPort: 8080
