Apache-webserver/service.yaml
apiVersion: apps/v1
kind: Service
metadata:  
  name: webserver-service
spec:
  selector:
    app: apache
  ports:
    - protoco: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
